feat(junit): init almost ready version